Biraj mariam/skeleton (#111)
* skeleton no tests

* final commit before test

* testing loading in docker

* finished with tests

* finishing touches on tests

* cypress test

* Added test for displaying skeleton on TopicPage

Co-Authored-By: Biraj <100142251+bp289@users.noreply.github.com>

* skeleton testing final touches

* linting errors

* prettier errors

* commented out states removed

* linter resolved

* minor fixes

* css fixes

* regenerating css files for linter

* feadfead

* prettier

* running prettier on css file

* removed margin

* Css fixes

* final touches

* prettier fixes

* testing loading

* cypress tests implemented

* skeleton test

* fixed topiccard testing

* fixes to skeleton testing

* Homepage#112 (#126)

* added homepagecard jsx

* adding in homepage fetch with error handling

* added fetch, relations cards and styling to homepage

* added cypress and jest tests and modified approuter test

* run prettier to rewrite

* changed margin for cypress test on phone width

* changed value for phone screen

* modified phone width value

* added mock fetch to homepage.cy

* took out console.log

* testing homepage

* turned of previous tests added ignore to cypress test to display error

* added dummy intercept

* fixed yaml depends on

* test 2

* removed screenshot config in cypress

* increase timeout

* upgraded cypress

* updated cypress

* added intercept after

* added cy.wait

* changed phone size

* added status code and body to request

* took out .env for networking

* added url env to yaml and tested jest, cypress, linters

* Update query_collections.yaml

* added visible test for cypress, ignored divs

* Update networking.js

* changed env variable to local host

---------

Co-authored-by: Dom Vinyard <domvinyard@me.com>

* Jump to top of the page when URL changes upon clicking on a new topic (#128)

* Added Sc

--- a/web/src/Styling/TopicBreadcrumbs/TopicBreadcrumbs.css
+++ b/web/src/Styling/TopicBreadcrumbs/TopicBreadcrumbs.css
@@ -1,18 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Tilt+Warp&display=swap");
-@media (max-width: 400px) {
+@media (max-width: 550.5px) {
   #desktop {
     display: none;
     margin-top: 30px;
   }
 }
-
-@media (min-width: 400px) {
+@media (min-width: 550.5px) {
   #desktop {
     display: block;
     margin-top: 30px;
   }
 }
-
 @media (min-width: 1001px) {
   #desktop {
     display: block;
@@ -21,18 +19,16 @@
   }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 550.5px) {
   #mobile {
     display: block;
   }
 }
-
-@media (min-width: 400px) {
+@media (min-width: 550.5px) {
   #mobile {
     display: none;
   }
 }
-
 @media (min-width: 1001px) {
   #mobile {
     display: none;
@@ -53,5 +49,4 @@
 
 .mobile-grandParent-btn {
   @apply bg-backdrop pb-2 pt-2 text-left text-white capitalize w-screen;
-}
-/*# sourceMappingURL=TopicBreadcrumbs.css.map */
+} /*# sourceMappingURL=TopicBreadcrumbs.css.map */
