--- a/web/src/Styling/TopicCard/TopicCard.scss
+++ b/web/src/Styling/TopicCard/TopicCard.scss
@@ -10,6 +10,7 @@
     background-color: white;
     display: flex;
     flex-direction: column;
+    width: 100%;
     & .topic-card-description {
       padding-left: 2em;
       padding-right: 2em;
