--- a/web/src/Styling/Homepage/Homepage.css
+++ b/web/src/Styling/Homepage/Homepage.css
@@ -6,10 +6,13 @@
 .groups-container {
   margin-top: 50px;
 }
+
 .groups-container .group-description {
-  color: rgb(131, 131, 131);
+  color: #838383;
   display: inline;
 }
+
 .groups-container .group-title {
   color: white;
-} /*# sourceMappingURL=Homepage.css.map */
+}
+/*# sourceMappingURL=Homepage.css.map */
