--- a/web/src/index.css
+++ b/web/src/index.css
@@ -33,4 +33,5 @@ h3 {
 
 h4 {
   @apply text-xl  font-bold;
-} /*# sourceMappingURL=App.css.map */ /*# sourceMappingURL=index.css.map */
+}
+/*# sourceMappingURL=index.css.map */
